# bazel-super-formatter

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .scalafmt.conf  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  extension_for_aspect_rules_js.bzl  extension_for_io_bazel_rules_go.bzl  extension_for_rules_python.bzl  non_module_deps.bzl  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  requirements.bzl  requirements_lock.txt  resolved.bzl  resolved_deps.py
.github/workflows/: ci.yaml  release.yml  release_prep.sh  workspace_snippet.sh
e2e/workspace/: .bazelrc  BUILD  WORKSPACE
examples/: address_book.proto  has space.css  hello.java  hello.json  hello.jsonnet  hello.libsonnet  hello.md
fmt/: BUILD.bazel  dependencies.bzl  fmt.sh  repositories.bzl  toolchains.bzl
format/: BUILD.bazel  buf.BUILD.bazel  dependencies.bzl  format.sh  langs.bzl  repositories.bzl  toolchains.bzl
utils/: jvm_dependencies.py
